--- a/gb/16/12/21/n8612709.md
+++ b/gb/16/12/21/n8612709.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/aqcayd3630/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aqcayd3630/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/aqcayd3630/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/aqcayd3630/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/aqcayd3630/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aqcayd3630/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/aqcayd3630/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/aqcayd3630/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/aqcayd3630/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/aqcayd3630/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/aqcayd3630/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/aqcayd3630/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/aqcayd3630/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/aqcayd3630/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/aqcayd3630/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/aqcayd3630/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/aqcayd3630/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/aqcayd3630/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/aqcayd3630/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/aqcayd3630/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/aqcayd3630/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/aqcayd3630/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/aqcayd3630/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>亚洲第一 照射过“脉冲光”的菇菇 上市了</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2016/12/ad4c59f3d3298f2b88e43dc202323cd0-600x400.jpg" />
 <h6>戒不掉零食，就吃健康的爱D菇脆饼手绘礼盒。（世鼎生技提供）
 </h6>
 <hr>
-<p>【大纪元2016年12月21日讯】（大纪元记者邓玫玲台湾台中报导）在食安风险越来越严峻的今日，人们可能还要面对营养摄取不足的问题，据卫生署调查发现高达98％的台湾人缺少维生素D，因为维生素D不易从日常的食物中取得，普遍日晒观念也不够正确，因此“<ahref="https://github.com/aqcayd3630/djy/blob/master/gb/tag/%E7%88%B1d%E8%8F%87.md#1">爱D菇</a>”为消费者找到富含麦角固醇的菇类，又引进<ahref="https://github.com/aqcayd3630/djy/blob/master/gb/tag/%E8%84%89%E5%86%B2%E5%85%89.md#1">脉冲光</a>照射技术，把菇类中的麦角固醇转化为珍贵维生素D，让“爱D菇”菇类产品摇身一变成为营养价值高的天然食品。</p>
+<p>【大纪元2016年12月21日讯】（大纪元记者邓玫玲台湾台中报导）在食安风险越来越严峻的今日，人们可能还要面对营养摄取不足的问题，据卫生署调查发现高达98％的台湾人缺少维生素D，因为维生素D不易从日常的食物中取得，普遍日晒观念也不够正确，因此“<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%88%B1d%E8%8F%87.md#1">爱D菇</a>”为消费者找到富含麦角固醇的菇类，又引进<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%84%89%E5%86%B2%E5%85%89.md#1">脉冲光</a>照射技术，把菇类中的麦角固醇转化为珍贵维生素D，让“爱D菇”菇类产品摇身一变成为营养价值高的天然食品。</p>
 <p><strong>健康活力&#8211;</strong><strong>黑木耳健康谷饮</strong></p>
-<p>“<ahref="https://github.com/aqcayd3630/djy/blob/master/gb/tag/%E7%88%B1d%E8%8F%87.md#1">爱D菇</a>”研发一款健康满载的&#8211;黑木耳健康谷饮，取自嘉义在地生产的有机黑木耳，经过“<ahref="https://github.com/aqcayd3630/djy/blob/master/gb/tag/%E8%84%89%E5%86%B2%E5%85%89.md#1">脉冲光</a>”照射后，再烘焙研磨成粉，与十种精选的谷粉以黄金比例结合，不但香醇浓厚，有着类似面茶的浓郁滋味，还富含珍贵的维生素D、膳食纤维与植物性胶质，随时喝一杯，活力满满。</p>
-<p><strong>真空低温</strong><strong>零负担&#8211;香菇与</strong><strong>袖珍<ahref="https://github.com/aqcayd3630/djy/blob/master/gb/tag/%E8%8F%87%E8%84%86%E9%A5%BC.md#1">菇脆饼</a>(</strong><strong>伴手礼)</strong></p>
-<p>“爱D菇”制作了系列健康小零嘴&#8211;香菇与袖珍<ahref="https://github.com/aqcayd3630/djy/blob/master/gb/tag/%E8%8F%87%E8%84%86%E9%A5%BC.md#1">菇脆饼</a>，选自新社、彰化在地成长的厚实香菇与鲜嫩袖珍菇，照射过“脉冲光”后，维生素D满载的大小菇，再经过“真空低温”脱水，就是毫无负担的小零嘴了，可不是高温油炸的喔，不但无致癌风险，还能不油不腻，酥脆可口。◇</p>
-<figure id="attachment_8612733" style="width: 450px" class="wp-caption aligncenter"><img class="wp-image-8612733 size-full" src="https://i.epochtimes.com/assets/uploads/2016/12/c4db06e0b787aacb64fccb8376310d5c-e1482288517449.jpg" alt="黑木耳健康谷饮礼盒。（世鼎生技提供）" width="450" b="307" /><figcaption class="wp-caption-text">黑木耳健康谷饮礼盒。（世鼎生技提供）</figcaption></figure>
-<figure id="attachment_8612785" style="width: 250px" class="wp-caption aligncenter"><img class="size-full wp-image-8612785" src="https://i.epochtimes.com/assets/uploads/2016/12/5716f4dffbb16efe97ee8f9b08086bb2-e1482289639833.jpg" alt="（世鼎生技提供）" width="250" b="199" /><figcaption class="wp-caption-text">（世鼎生技提供）</figcaption></figure>
+<p>“<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%88%B1d%E8%8F%87.md#1">爱D菇</a>”研发一款健康满载的&#8211;黑木耳健康谷饮，取自嘉义在地生产的有机黑木耳，经过“<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%84%89%E5%86%B2%E5%85%89.md#1">脉冲光</a>”照射后，再烘焙研磨成粉，与十种精选的谷粉以黄金比例结合，不但香醇浓厚，有着类似面茶的浓郁滋味，还富含珍贵的维生素D、膳食纤维与植物性胶质，随时喝一杯，活力满满。</p>
+<p><strong>真空低温</strong><strong>零负担&#8211;香菇与</strong><strong>袖珍<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%8F%87%E8%84%86%E9%A5%BC.md#1">菇脆饼</a>(</strong><strong>伴手礼)</strong></p>
+<p>“爱D菇”制作了系列健康小零嘴&#8211;香菇与袖珍<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%8F%87%E8%84%86%E9%A5%BC.md#1">菇脆饼</a>，选自新社、彰化在地成长的厚实香菇与鲜嫩袖珍菇，照射过“脉冲光”后，维生素D满载的大小菇，再经过“真空低温”脱水，就是毫无负担的小零嘴了，可不是高温油炸的喔，不但无致癌风险，还能不油不腻，酥脆可口。◇</p>
+<figure id="attachment_8612733" aria-describedby="caption-attachment-8612733" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2016/12/c4db06e0b787aacb64fccb8376310d5c-e1482288517449.jpg" target="_blank" rel="noreferrer noopener"> <img class="wp-image-8612733 size-full" src="https://i.epochtimes.com/assets/uploads/2016/12/c4db06e0b787aacb64fccb8376310d5c-e1482288517449.jpg" alt="黑木耳健康谷饮礼盒。（世鼎生技提供）" width="450" b="307" /></a><figcaption id="caption-attachment-8612733" class="wp-caption-text">黑木耳健康谷饮礼盒。（世鼎生技提供）</figcaption></figure>
+<figure id="attachment_8612785" aria-describedby="caption-attachment-8612785" style="width: 250px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2016/12/5716f4dffbb16efe97ee8f9b08086bb2-e1482289639833.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-full wp-image-8612785" src="https://i.epochtimes.com/assets/uploads/2016/12/5716f4dffbb16efe97ee8f9b08086bb2-e1482289639833.jpg" alt="（世鼎生技提供）" width="250" b="199" /></a><figcaption id="caption-attachment-8612785" class="wp-caption-text">（世鼎生技提供）</figcaption></figure>
 <p><strong>世鼎生技股份有限公司</strong><br />
 电话：(04)2535-6262<br />
 地址：台中市潭子区中山路三段355巷8号<br />
@@ -23,42 +23,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/16/4/14/n7555954.md#1">回归不戴眼镜的清晰世界</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/16/4/15/n7558424.md#1">“飙雪”一族 皮肤保养二三事</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/16/8/20/n8220827.md#1">2016云林十大伴手礼出炉！20日举行颁奖典礼</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/6/29/n12219420.md#1">台人创业最爱餐饮 农业食材商标申请居冠</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/5/19/n12121203.md#1">农产初级加工场上路 农委会：5年产值20亿元</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/5/15/n12111750.md#1">台盐减钠盐标示不实？ 立委：有误导之嫌</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/4/6/n12007711.md#1">台餐饮业前2月营收年增率 创17年新低</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/3/23/n11966753.md#1">台农产品网销1.5月7千万 立委：1个月2亿</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/3/5/n11916674.md#1">精品巧克力：屏东“曾志元巧克力”屏东可可｜巧克力世界冠军｜台湾之光</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/2/19/n11880298.md#1">从大陆转移美国 手摇饮店庆幸躲过“疫”劫</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/4/14/n7555954.md#1">回归不戴眼镜的清晰世界</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/4/15/n7558424.md#1">“飙雪”一族 皮肤保养二三事</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/20/n8220827.md#1">2016云林十大伴手礼出炉！20日举行颁奖典礼</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/6/n13699923.md#1">网购中国零食无繁体字标示 台立委忧食安疑虑</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/6/n13697549.md#1">台农民嫁接改良 突破子弹莲雾内销困境</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/1/7/n13487376.md#1">牛初乳营养健康好神速  专家教您选对正确的配方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/12/23/n13455527.md#1">日本进口食品检验18万件 台卫福部：辐射未超标</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/11/18/n13383906.md#1">台麦当劳24日调整售价 最多涨7元</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/10/21/n13319911.md#1">中国猪价崩防走私 李仲威：有人力需求争取中</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/10/20/n13317687.md#1">红豆、大蒜拟调升配额外关税 最快今年底通过</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/28/n10749135.md#1" target="_blank">林辉：邓小平女儿指北大曾变成法西斯集中营</a></li><li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/10/23/n4278972.md#1" target="_blank">阚神州：中共行株连之罪恶 肇残民之祸</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/18/n10570999.md#1" target="_blank">凌晓辉：毒害人类灵魂的共产主义理论（中）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/8/n11370721.md#1" target="_blank">爱德华?斯考特: 对迫害善良的一个政治上的回应</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/8/10/n12319988.md#1">桃园妇见邻近空屋没人住 竟花28万装潢入住</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/8/10/n12318484.md#1">【更新】周庭被捕 黎智英之后第十人</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/8/11/n12322303.md#1">中国制口罩伪装MIT闯关入台 海关单日查获7350片</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/8/10/n12319818.md#1">中共称制裁11美国人 卢比奥等回应</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/8/11/n12321403.md#1">中共制裁美国人 逮捕黎智英 蓬佩奥强硬回应</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/8/9/n12318283.md#1">与李小龙交手谁会赢 成龙的回答令人不齿</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/8/10/n12318600.md#1">TWICE线上开唱126国粉丝参与 子瑜新造型亮相</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/8/9/n12317932.md#1">用筷子扒拉菜被批素质低 赵丽颖获嘉宾帮澄清</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/8/9/n12318111.md#1">胡歌主演新剧 被王家卫要求减重8至10公斤</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/8/10/n12320539.md#1">林夕改编歌词赠罗冠聪 无知网军污蔑成笑柄</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/8/9/n12317099.md#1">疫情下意大利圣母雕像流血泪 引民众围观</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/8/7/n12313595.md#1">“女子无才便是德”究竟是什么意思</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/11/1/4/n3132042.md#1">巴洛克艺术（三）鲁本斯</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/7/30/n12295393.md#1">文莱国王率王族入华 明成祖御制镇国碑文</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/7/18/n12265329.md#1">【医案】驽马十驾</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741091.md#1">【秦鹏直播】要官员剥离海外资产 习意欲何为？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741045.md#1">【神韵早期节目】唐玄宗游月宫（2013年制作）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741104.md#1">【横河观点】拜登东亚行 美50参议员挺台湾</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/11/n13733128.md#1">睡醒有眼屎不是坏事！但眼屎过多小心3大警讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/aqcayd3630/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/aqcayd3630/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/12/21/n8612709.htm">亚洲第一 照射过“脉冲光”的菇菇 上市了</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/12/21/n8612709.htm">亚洲第一 照射过“脉冲光”的菇菇 上市了</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/aqcayd3630/djy/blob/master/gb/16/12/21/n8612709.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/aqcayd3630/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/aqcayd3630/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/aqcayd3630/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/16/12/21/n8612709.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
